[package]
name = "ingestor"
version = "0.1.1"
edition = "2021"

[dependencies]
alloy = { version = "1.7.3", features = ["provider-http", "rpc-types"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full", "macros"] }
log = "0.4"
anyhow = { version = "1.0" }
simple_logger = "5.2"

sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print" ] }
migration = { path = "migration" }